--- a/templates/static/usuarios/css/cadastro.css
+++ b/templates/static/usuarios/css/cadastro.css
@@ -1,14 +1,13 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Inter', sans-serif;
 }
 
 .bg1{
-
     background-image: url('/static/usuarios/img/bg1.png') !important;
     height: 100vh;
     background-size: cover;
-
 }
 
 .titulo-fonte{
@@ -19,20 +18,30 @@
     display: flex;
 }
 
+.box-titulo-item h3 {
+    font: 2rem 'Jura';
+}
+
 .divisor{
     border: 0;
+    margin-top: 0;
+    margin-bottom: 5rem;
     height: 1px;
     background-image: linear-gradient(to right, transparent, rgb(162, 219, 236), transparent);
     display: block;
-
 }
 
 .tac{
     text-align: center;
 }
 
+.tac h4 {
+    font: 2rem 'Jura';
+}
+
 .box-form{
     padding: 20px;
+    margin-top: 4rem;
     background-color: rgba(217,217,217, .05);
     color: white !important;
 }
@@ -40,7 +49,6 @@
 .box-circle{
     display: flex;
     gap: 5px;
-    
 }
 
 .circle{
@@ -69,7 +77,6 @@
     color: white;
     outline: 0;
     width: 100%;
-
 }
 
 .btn-cadastro{
@@ -81,4 +88,9 @@
     font-weight: bold;
     padding-left: 25px;
     padding-right: 25px;
+    opacity: .8;
+}
+
+.btn-cadastro:hover{
+    opacity: 1;
 }
