--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% block 'titulo' %}Cadastro de usuário{% endblock  %}
+
 {% block 'cabecalho' %}
     <link href="{% static 'usuarios/css/cadastro.css' %}" rel="stylesheet">
 {% endblock %}
@@ -10,62 +12,53 @@
 
     <div class="bg1">
         <div class="container">
-            <div class="row">
-                {% if messages %}
-                    {% for message in messages %}
-                        <section class="alert {{message.tags}} text-center py-1 mb-3">
-                            {{message}}
-                        </section>
-                    {% endfor %}
-                {% endif %}
+            <div class="row gap-5 pt-4">
                 <div class="col-md">
                     <div class="box-titulo">
                         <div class="box-titulo-item">
                             <img src="{% static 'usuarios/img/logo.png' %}" alt="logo">
                         </div>
-                        <div style="margin-top: auto; margin-bottom: auto;" class="box-titulo-item">
-                            <h3 >Study.Async</h3>
+                        <div class="box-titulo-item my-auto">
+                            <h3>Study.Async</h3>
                         </div>
                     </div>
                     <hr class="divisor">
-                    <br>
                     <div class="tac">
-                        <h4 style="font-size: 30px">Sua plataforma online<br> para te ajudar nos estudos</h4>
+                        <h4>Sua plataforma online<br>para te ajudar nos estudos</h4>
                     </div>
-                    
                 </div>
                 <div class="col-md">
-                    <br>
-                    <br>
                     <div class="box-form">
-                        <div class="box-circle">
+                        <div class="box-circle mb-3">
                             <div class="circle c1"></div>
                             <div class="circle c2"></div>
                             <div class="circle c3"></div>
                         </div>
-                        <br>
                         <h3>Cadastre-se</h3>
-                        <form action="{% url 'cadastro' %}" method="POST">{% csrf_token %}
-                            <label>Username</label>
-                            <input type="text" class="input-form" name="username" id="">
-                            <br>
-                            <br>
-                            <label>Senha</label>
-                            <input type="password" class="input-form" name="senha" id="">
-                            <br>
-                            <br>
-                            <label>Confirmar senha</label>
-                            <input type="password" class="input-form" name="confirmar_senha" id="">
-                            <br>
-                            <br>
-                            <input type="submit" value="Enviar" class="btn-cadastro">
-                            <br>
-                            <br>
-                            <br>
-                            <br>
+                        {% if messages %}
+                            {% for message in messages %}
+                                <section class="alert {{message.tags}} text-center py-1 mb-3">
+                                    {{message}}
+                                </section>
+                            {% endfor %}
+                        {% endif %}
+                        <form action="{% url 'cadastro' %}" method="POST">
+                            {% csrf_token %}
+                            <div class="my-3">
+                                <label>Username</label>
+                                <input type="text" class="input-form" name="username">
+                            </div>
+                            <div class="mb-3">
+                                <label>Senha</label>
+                                <input type="password" class="input-form" name="senha">
+                            </div>
+                            <div class="mb-4">
+                                <label>Confirmar senha</label>
+                                <input type="password" class="input-form" name="confirmar_senha">
+                            </div>
+                            <input type="submit" value="Enviar" class="btn-cadastro mb-5">
                         </form>
                     </div>
-
                 </div>
             </div>
         </div>
