--- a/usuarios/templates/login.html
+++ b/usuarios/templates/login.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block 'titulo' %}Login{% endblock  %}
 {% block 'cabecalho' %}
     <link href="{% static 'usuarios/css/cadastro.css' %}" rel="stylesheet">
 {% endblock %}
@@ -9,33 +10,29 @@
 
     <div class="bg1">
         <div class="container">
-            <div class="row">
+            <div class="row gap-5 pt-4">
                 <div class="col-md">
                     <div class="box-titulo">
                         <div class="box-titulo-item">
                             <img src="{% static 'usuarios/img/logo.png' %}">
                         </div>
-                        <div style="margin-top: auto; margin-bottom: auto;" class="box-titulo-item">
-                            <h3 >Study.Async</h3>
+                        <div class="box-titulo-item my-auto">
+                            <h3>Study.Async</h3>
                         </div>
                     </div>
                     <hr class="divisor">
-                    <br>
                     <div class="tac">
-                        <h4 style="font-size: 30px">Sua plataforma online<br> para te ajudar nos estudos</h4>
+                        <h4>Sua plataforma online<br> para te ajudar nos estudos</h4>
                     </div>
-                    
                 </div>
                 <div class="col-md">
-                    <br>
-                    <br>
                     <div class="box-form">
-                        <div class="box-circle">
+                        <div class="box-circle mb-3">
                             <div class="circle c1"></div>
                             <div class="circle c2"></div>
                             <div class="circle c3"></div>
                         </div>
-                        <br>
+                        <h3>Logar</h3>
                         {% if messages %}
                             {% for message in messages %}
                                 <section class="alert {{message.tags}} text-center py-1 mb-3">
@@ -43,24 +40,19 @@
                                 </section>
                             {% endfor %}
                         {% endif %}
-                        <h3>Logar</h3>
-                        <form action="{% url 'login' %}" method="POST">{% csrf_token %}
-                            <label>Username</label>
-                            <input type="text" class="input-form" name="username" id="">
-                            <br>
-                            <br>
-                            <label>Senha</label>
-                            <input type="password" class="input-form" name="senha" id="">
-                            <br>
-                            <br>
-                            <input type="submit" value="Enviar" class="btn-cadastro">
-                            <br>
-                            <br>
-                            <br>
-                            <br>
+                        <form action="{% url 'login' %}" method="POST">
+                            {% csrf_token %}
+                            <div class="my-3">
+                                <label>Username</label>
+                                <input type="text" class="input-form" name="username">
+                            </div>
+                            <div class="mb-4">
+                                <label>Senha</label>
+                                <input type="password" class="input-form" name="senha">
+                            </div>
+                            <input type="submit" value="Enviar" class="btn-cadastro mb-5">
                         </form>
                     </div>
-
                 </div>
             </div>
         </div>
