--- a/templates/static/flashcard/css/novo_flashcard.css
+++ b/templates/static/flashcard/css/novo_flashcard.css
@@ -10,12 +10,14 @@
 }
 
 .flashcard-box-item{
-    text-align: center;
+    text-align: left;
 }
 
-.flashcard p{
+.flashcard p {
     font-size: 20px;
     font-weight: bold;
+    /* text-align: left; */
+    display: inline-block;
     cursor: pointer;
 }
 
