--- a/flashcard/templates/relatorio.html
+++ b/flashcard/templates/relatorio.html
@@ -49,14 +49,13 @@
         new Chart(ctx, {
             type: 'pie',
             data: {
-                labels: ['Acertos', 'Erros'],
+                labels: ['Acertos', 'Erros', 'Faltantes'],
                 datasets: [{
                     label: 'Qtd',
                     data: {{dados}},
                     borderWidth: 1
                 }]
             },
-            
         });
 
         new Chart(ctx2, {
