Aplica autofocus nos templates e modifica url sair

--- a/usuarios/templates/login.html
+++ b/usuarios/templates/login.html
@@ -44,7 +44,7 @@
                             {% csrf_token %}
                             <div class="my-3">
                                 <label>Username</label>
-                                <input type="text" class="input-form" name="username">
+                                <input type="text" class="input-form" name="username" autofocus>
                             </div>
                             <div class="mb-4">
                                 <label>Senha</label>
