--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -46,7 +46,7 @@
                             {% csrf_token %}
                             <div class="my-3">
                                 <label>Username</label>
-                                <input type="text" class="input-form" name="username">
+                                <input type="text" class="input-form" name="username" autofocus>
                             </div>
                             <div class="mb-3">
                                 <label>Senha</label>
