--- a/templates/static/usuarios/css/cadastro.css
+++ b/templates/static/usuarios/css/cadastro.css
@@ -79,20 +79,35 @@
     width: 100%;
 }
 
-.btn-cadastro{
-    padding: 10px;
-    background-color: #58fcd5;
-    border: none;
+.btn-cadastro,
+.btn-secundario {
+    padding: 8px 25px;
     border: 1px solid #58fcd5;
+    border-radius: 6px;
     font-size: 18px;
     font-weight: bold;
-    padding-left: 25px;
-    padding-right: 25px;
-    opacity: .9;
+    text-decoration: none;
+    transition: .3s;
+}
+
+.btn-cadastro {
+    background-color: #58fcd5;
+    opacity: .8;
 }
 
 .btn-cadastro:hover{
     opacity: 1;
+}
+
+.btn-secundario {
+    background-color: transparent;
+    border: 1px solid #58fcd5;
+    color: #fff;
+}
+
+.btn-secundario:hover {
+    background-color: #58fcd5;
+    color: #000;
 }
 
 .bsm {
