--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -35,26 +35,20 @@
                             <div class="circle c3"></div>
                         </div>
                         <h3>Cadastre-se</h3>
-                        {% if messages %}
-                            {% for message in messages %}
-                                <section class="alert {{message.tags}} text-center py-1 mb-3">
-                                    {{message}}
-                                </section>
-                            {% endfor %}
-                        {% endif %}
+                        {% include "partials/messages.html" %}
                         <form action="{% url 'cadastro' %}" method="POST">
                             {% csrf_token %}
                             <div class="my-3">
                                 <label>Username</label>
-                                <input type="text" class="input-form" name="username" autofocus>
+                                <input type="text" class="input-form" name="username" required autofocus>
                             </div>
                             <div class="mb-3">
                                 <label>Senha</label>
-                                <input type="password" class="input-form" name="senha">
+                                <input type="password" class="input-form" name="senha" required>
                             </div>
                             <div class="mb-4">
                                 <label>Confirmar senha</label>
-                                <input type="password" class="input-form" name="confirmar_senha">
+                                <input type="password" class="input-form" name="confirmar_senha" required>
                             </div>
                             <input type="submit" value="Enviar" class="btn-cadastro mb-5">
                         </form>
