--- a/flashcard/templates/iniciar_desafio.html
+++ b/flashcard/templates/iniciar_desafio.html
@@ -2,62 +2,51 @@
 {% load static %}
 
 {% block 'cabecalho' %}
-
     <link href="{% static 'usuarios/css/cadastro.css' %}" rel="stylesheet">
     <link href="{% static 'flashcard/css/novo_flashcard.css' %}" rel="stylesheet">
     <link href="{% static 'flashcard/css/iniciar_desafio.css' %}" rel="stylesheet">
-
 {% endblock 'cabecalho' %}
-
 
 {% block 'conteudo' %}
     <div class="container ctx">
-        <br>
-        <br>
-        <h2 class="fonte-principal">Iniciar desafio</h2>
+        <h2 class="fonte-principal mt-5">Iniciar desafio</h2>
         <p class="fonte-secundaria">Escolha as categorias e a dificuldade do desafio</p>
-        {% if messages %}
-            {% for message in messages %}
-                <div class="alert {{message.tags}} tac py-1 mb-3">{{ message }}</div>
-            {% endfor %}
-        {% endif %}
+        {% include "partials/messages.html" %}
         <form action="{% url 'iniciar_desafio' %}" method="POST">
             {% csrf_token%}
-            <div class="row">
-                
+            <div class="row mb-4">
                 <div class="col-md">
                     <label for="">Titulo</label>
-                    <input type="text" class="form-control" name="titulo">
-                </div>
-                <div class="col-md">
-                    <label>Categoria</label>
-                    <select name="categoria" class="form-select" multiple>
-                        {% for categoria in categorias %}
-                            <option value="{{categoria.id}}">
-                                {{categoria.nome}}
-                            </option>
-                        {% endfor %}
-                    </select>
+                    <input type="text" class="form-control" name="titulo" value="{{titulo}}" required>
                 </div>
                 <div class="col-md">
                     <label>Dificuldade</label>
-                    <select name="dificuldade" class="form-select">
+                    <select name="dificuldade" class="form-select" required>
+                        <option value="">---</option>
                         {% for dificuldade in dificuldades %}
-                            <option value="{{dificuldade.0}}">
+                            <option value="{{dificuldade.0}}"
+                                {% if dificuldade.0 == dif_selecionada %}selected{% endif %}>
                                 {{dificuldade.1}}
                             </option>
                         {% endfor %}
                     </select>
                 </div>
-
                 <div class="col-md">
-                    <label>Qtd questões</label>
-                    <input type="number" class="form-control" name="qtd_perguntas">
+                    <label>Quantidade de questões</label>
+                    <input type="number" class="form-control" name="qtd_perguntas" value="{{qtd_perguntas}}" required>
                 </div>
-                
             </div>
-            <br>
-            <br>
+            <div class="mb-5">
+                <label>Categoria</label>
+                <select name="categoria" class="form-select" multiple required>
+                    {% for categoria in categorias %}
+                        <option value="{{categoria.id}}"
+                            {% if categoria in cat_selecionadas %}selected{% endif %}>
+                            {{categoria.nome}}
+                        </option>
+                    {% endfor %}
+                </select>
+            </div>
             <input type="submit" class="btn-cadastro" value="Iniciar desafio">
         </form>
     </div>
